# backend_poc

./: README.md  pyproject.toml
DOCKERCOMPOSE/: 01_create_tables.sql  02_insert_test_data.sql  docker-compose.yml
DOCKERCOMPOSE/data/pgadmin/: pgadmin4.db
DOCKERCOMPOSE/data/pgadmin/sessions/: 2a7ce5b7-2b45-462a-96fe-d505a4ed5fa6  cae1ec74-fe31-4ab1-860d-d7226280e482
backend_poc/: main.py
backend_poc/api/v1/: routes.py
backend_poc/api/v1/endpoints/: person.py
backend_poc/core/: config.py  container.py  database.py
backend_poc/model/: company.py  employment.py  person.py
backend_poc/repository/: __init__.py  base_repository.py  person_repository.py
backend_poc/schema/: base_schema.py  person_schema.py
backend_poc/services/: __init__.py  base_service.py  person_service.py
backend_poc/util/: partial_model.py  query_builder.py
